MDEV-12939 A query crashes MariaDB in Item_func_regex::cleanup

and
MDEV-13144 regexp on views - crashed mariadb server

implement Item_func_regex::build_clone()